--- a/mediathread/templates/registration/invitation_accept.html
+++ b/mediathread/templates/registration/invitation_accept.html
@@ -23,6 +23,7 @@
 
     .register-form input[name='first_name'],
     .register-form input[name='last_name'],
+    .register-form input[name='email'],
     .register-form input[name='password1'],
     .register-form input[name='password2'] {
         width: 45%;
@@ -77,7 +78,14 @@
               {% endif %}
             </div>
         {% endif %}
-    
+        <div class="form-group" >
+            <label>Email:</label>
+            <div>
+                <input class="form-control" type="text" name="email"
+                    value="{% if invite %}{{invite.email}}{% else %}{{form.data.email}}{% endif %}" readonly="readonly" />
+            </div>
+        </div>
+        <br />    
         <div class="form-group {% if form.first_name.errors or form.last_name.errors %}has-error{% endif %}">
             <label for="id_first_name"><b>Your name is:</b></label>
             <div>
@@ -97,7 +105,7 @@
                 {% endif %}
             </div>
         </div>
-        <br />
+        <br />        
         <div class="form-group {% if form.username.errors %}has-error{% endif %}" >
             <label>Username:</label>
             <div>
