--- a/mediathread/templates/projects/selection_assignment_edit.html
+++ b/mediathread/templates/projects/selection_assignment_edit.html
@@ -171,10 +171,11 @@
                         <h3>3. Set response due date &amp; visibility</h3>
                         <p></p>
                         <div class="form-group">
-                            <label for="due_date">Due Date <span class="small">(optional)</span></label>
+                            <label for="due_date">Due Date</label>
                             <input class="form-control" type="text"
                                 name="due_date" value="{{form.instance.due_date|date:'m/d/y'}}">
                         </div>
+                        <div class="help-inline">Please choose a due date.</div>
                         <br />
                         <label for="response_view_policy">Visibility</label>
                         <p>Choose when students can see responses submitted by other students:</p>
