--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -202,6 +202,8 @@
             <div>
                 {% block pagetitle %}{% endblock %}
 
+                {% bootstrap_messages %}
+
                 {% block content %}{% endblock %}
 
                 <!-- ###### Don't touch this ###### -->
