allow messages override
The ColumbiaU specific class_roster.html template needs to handle message display a bit differently.

--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -202,7 +202,9 @@
             <div>
                 {% block pagetitle %}{% endblock %}
 
+                {% block messages %}
                 {% bootstrap_messages %}
+                    {% endblock %}
 
                 {% block content %}{% endblock %}
 
