--- a/mediathread/templates/base.html
+++ b/mediathread/templates/base.html
@@ -176,7 +176,9 @@
                     <h1 id="course_title">
                     {% block coursetitle %}
                         {% flag "addressable_courses" %}
-                        <a href="{% url 'course_detail' course.pk %}" id="course_title_link">{{course.title}}</a>
+                        {% if course %}
+                            <a href="{% url 'course_detail' course.pk %}" id="course_title_link">{{course.title}}</a>
+                        {% endif %}
                         {% else %}
                         <a href="/" id="course_title_link">{{course.title}}</a>
                         {% endflag %}
