--- a/mediathread/templates/dashboard/class_manage_sources.html
+++ b/mediathread/templates/dashboard/class_manage_sources.html
@@ -82,198 +82,181 @@
     </form>
 </div>
 
-
 {% if is_staff %}
-<div class="well">
-     <h3>Specific Internet Resources</h3>
+    <div class="well">
+        <h3>Specific Internet Resources</h3>
         <ul>
-        <li class="suggested-collection">
-            <h3>Local Quicktime Streaming Video</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
+            <li class="suggested-collection">
+                <h3>Local Quicktime Streaming Video</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
 
-            Asset QT Stream: <input type="text" name="quicktime" value="" />
-            <br/>
-            Asset Title: <input type="text" name="title" value="" />
-            <br/>
-            Dimensions: <input type="text" name="quicktime-metadata" value="w480h360" /> (as w{width}h{height} do not include controller height)
-            <br/>
-            Final Cut Pro XML url: <input type="text" name="xmeml" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
+                    <div class="form-row">
+                        <label>
+                            Asset QT Stream:
+                            <input class="form-control form-control-sm"
+                                   type="text" name="quicktime" value="" />
+                        </label>
+                    </div>
+
+                    <div class="form-row">
+                        <label>
+                            Asset Title:
+                            <input class="form-control form-control-sm"
+                                   type="text" name="title" value="" />
+                        </label>
+                    </div>
+
+                    <div class="form-row">
+                        <label>
+                            Dimensions
+                            <input class="form-control form-control-sm"
+                                   type="text" name="quicktime-metadata"
+                                   value="w480h360" />
+                            <small class="form-text text-muted">
+                                (as w{width}h{height} do not include controller height)
+                            </small>
+                        </label>
+                    </div>
+
+                    <div class="form-row">
+                        <label>
+                            Final Cut Pro XML url:
+                            <input class="form-control form-control-sm"
+                                   type="text" name="xmeml" value="" />
+                        </label>
+                    </div>
+
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
             </li>
             <li class="suggested-collection">
-            <h3>YouTube Video</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            YouTube View (Watch) URL: <input type="text" name="url" value="" /> (example: https://www.youtube.com/watch?v=MjdEEwzskck)
-            <br/>
-            YouTube Video URL: <input type="text" name="youtube" value="" /> (example: https://www.youtube.com/v/MjdEEwzskck&hl=en_US&fs=1)
-            <br/>
-            YouTube Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>Flash Video (.flv)</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            Flash Video View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Flash Video URL: <input type="text" name="flv" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>Flash Video Pseudo Streaming(.flv)</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            Flash Video View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Flash Video URL: <input type="text" name="flv_pseudo" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            Dimensions: <input type="text" name="flv_pseudo-metadata" value="w480h360" /> (as w{width}h{height} do not include controller height)
-            <br/>
-            QueryString: <input type="text" name="querystring" value="" />
-            <br/>
-            Thumbnail URL: <input type="text" name="thumb" value="" />
-            <br/>
-            Final Cut Pro XML url: <input type="text" name="xmeml" value="" />
-            <br />
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>Kaltura .kdp</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            Kaltura Video Remote Page: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Kaltura Video URL: <input type="text" name="kaltura" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>MP4 (.mp4)</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Video URL: <input type="text" name="mp4" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>MP3 Audio (.mp3)</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the audio clip)
-            <br/>
-            Audio URL: <input type="text" name="mp3" value="" /> (the actual audio URL)
-            <br/>
-            Cover Image URL: <input type="text" name="poster" value="" />
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>MP3 Audio (.mp3) as MP4</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the audio clip)
-            <br/>
-            Audio as MP4 URL: <input type="text" name="mp4_audio" value="" /> (the actual audio URL)
-            <br/>
-            Cover Image URL: <input type="text" name="poster" value="" />
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>MP4 Pseudo Streaming (.mp4)</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Video URL: <input type="text" name="mp4_pseudo" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            QueryString: <input type="text" name="querystring" value="" />
-            <br />
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>Panopto</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Video URL: <input type="text" name="mp4_panopto" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>RTMP (.mp4)</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Video URL: <input type="text" name="mp4_rtmp" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
-        <li class="suggested-collection">
-            <h3>RTMP (.flv)</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Video URL: <input type="text" name="flv_rtmp" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
+                <h3>YouTube Video</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
+                    YouTube View (Watch) URL: <input type="text" name="url" value="" /> (example: https://www.youtube.com/watch?v=MjdEEwzskck)
+                    <br/>
+                    YouTube Video URL: <input type="text" name="youtube" value="" /> (example: https://www.youtube.com/v/MjdEEwzskck&hl=en_US&fs=1)
+                    <br/>
+                    YouTube Title: <input type="text" name="title" value="" />
+                    <br/>
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
+            </li>
+
+            <li class="suggested-collection">
+                <h3>Vimeo</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
+
+                    <div class="form-row">
+                        <label>
+                            Vimeo URL
+                            <input class="form-control form-control-sm"
+                                   type="text" name="url" value="" />
+                            <small class="form-text text-muted">
+                                example: https://vimeo.com/12345678
+                            </small>
+                        </label>
+                    </div>
+
+                    <div class="form-row">
+                        <label>
+                            Title
+                            <input class="form-control form-control-sm"
+                                   type="text" name="title" value="" />
+                        </label>
+                    </div>
+
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
+            </li>
+
+            <li class="suggested-collection">
+                <h3>Kaltura .kdp</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
+                    Kaltura Video Remote Page: <input type="text" name="url" value="" /> (the remote page containing the video)
+                    <br/>
+                    Kaltura Video URL: <input type="text" name="kaltura" value="" /> (the actual video URL)
+                    <br/>
+                    Title: <input type="text" name="title" value="" />
+                    <br/>
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
             </li>
             <li class="suggested-collection">
-            <h3>RealPlayer (.rm)</h3>
-            <form action="{% url 'asset-save' %}" method="POST">
-            {% include "assetmgr/pretender_select.html" %}
-            View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
-            <br/>
-            Video URL: <input type="text" name="realplayer" value="" /> (the actual video URL)
-            <br/>
-            Title: <input type="text" name="title" value="" />
-            <br/>
-            <input type="submit" />
-            </form>
-        </li>
+                <h3>MP4 (.mp4)</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
+                    View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
+                    <br/>
+                    Video URL: <input type="text" name="mp4" value="" /> (the actual video URL)
+                    <br/>
+                    Title: <input type="text" name="title" value="" />
+                    <br/>
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
+            </li>
+            <li class="suggested-collection">
+                <h3>MP3 Audio (.mp3)</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
+                    View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the audio clip)
+                    <br/>
+                    Audio URL: <input type="text" name="mp3" value="" /> (the actual audio URL)
+                    <br/>
+                    Cover Image URL: <input type="text" name="poster" value="" />
+                    <br/>
+                    Title: <input type="text" name="title" value="" />
+                    <br/>
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
+            </li>
+            <li class="suggested-collection">
+                <h3>MP3 Audio (.mp3) as MP4</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
+                    View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the audio clip)
+                    <br/>
+                    Audio as MP4 URL: <input type="text" name="mp4_audio" value="" /> (the actual audio URL)
+                    <br/>
+                    Cover Image URL: <input type="text" name="poster" value="" />
+                    <br/>
+                    Title: <input type="text" name="title" value="" />
+                    <br/>
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
+            </li>
+            <li class="suggested-collection">
+                <h3>MP4 Pseudo Streaming (.mp4)</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
+                    View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
+                    <br/>
+                    Video URL: <input type="text" name="mp4_pseudo" value="" /> (the actual video URL)
+                    <br/>
+                    Title: <input type="text" name="title" value="" />
+                    <br/>
+                    QueryString: <input type="text" name="querystring" value="" />
+                    <br />
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
+            </li>
+            <li class="suggested-collection">
+                <h3>Panopto</h3>
+                <form action="{% url 'asset-save' %}" method="POST">
+                    {% include "assetmgr/pretender_select.html" %}
+                    View (Watch) URL: <input type="text" name="url" value="" /> (the remote page containing the video)
+                    <br/>
+                    Video URL: <input type="text" name="mp4_panopto" value="" /> (the actual video URL)
+                    <br/>
+                    Title: <input type="text" name="title" value="" />
+                    <br/>
+                    <input class="btn btn-sm btn-primary" type="submit" />
+                </form>
+            </li>
         </ul>
-</div>
+    </div>
 {% endif %}
 {% endblock %}
