Use <strong> instead of <b>

--- a/mediathread/templates/registration/login_darkmode.html
+++ b/mediathread/templates/registration/login_darkmode.html
@@ -26,7 +26,7 @@ text-center
           <h1 class="text-light">Sign In</h1>
 
           <!-- GUEST LOGIN -->
-          <p class="lead text-light">I have a <b>Guest</b> account.</p>
+          <p class="lead text-light">I have a <strong>Guest</strong> account.</p>
           {% if form.errors %}
               <div class="alert alert-danger" role="alert">
                   <div><b>Invalid username/password</b></div><br />
