--- a/mediathread/templates/main/collection_add.html
+++ b/mediathread/templates/main/collection_add.html
@@ -40,11 +40,21 @@ Add to Collection
                             Contribute video and audio to this course directly from your desktop into Mediathread with Wardenclyffe.
                         </p>
                     </div>
+
                     <div class="col-md-6 order-md-1">
                         <h2>Import Media</h2>
                         <p class="lead">
 				            Install Mediathread’s Google Chrome extension to import video, audio, and images into this course from various sites across the web. You must be using Chrome to install this extension.
 			            </p>
+                        <div class="arrowContent">
+                            {% if request.user_agent.browser.family == 'Chrome' or request.user_agent.browser.family == 'Chromium' %}
+                            {% include "assetmgr/install_chrome_extension.html" %}
+                            {% elif request.user_agent.browser.family == 'Safari' %}
+                            {% include "assetmgr/install_safari_extension.html" %}
+                            {% elif request.user_agent.browser.family == 'Firefox' %}
+                            {% include "assetmgr/install_firefox_extension.html" %}
+                            {% endif %}
+                        </div> <!-- end import into collection box -->
                     </div>
                 </div>
             </div>
